Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34312

Corrupted text rendering in very large models

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.2.0
    • 5.2.0 Beta1
    • Quick: SceneGraph
    • None
    • any
    • afee694ce5d65518e5908b97e9a691c03fe0a844

    Description

      To reproduce, modify the Qt Quick Controls gallery example to show 1 million items in the model and scroll down to the bottom. You will see that text starts "floating" around as seen in the attached picture. It looks like it could be lack of floating point precision in the texture coordinates.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes